--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,8 @@
 @import "partials/typography";
 @import "partials/nav";
 @import "partials/footer";
+@import "partials/messages";
+@import "partials/loading";
 @import "partials/buttons";
 @import "partials/herobanner";
 @import "partials/productsContainer";
@@ -13,3 +15,4 @@
 @import "partials/details";
 @import "partials/basket";
 @import "partials/forms";
+@import "partials/edit";
