--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,32 +1,40 @@
 footer {
     background: getColour(primaryred);
     display: grid;
-    grid-template-rows: auto auto 1fr;
+    grid-template-rows: auto 1fr;
+    gap: 10px;
     flex-shrink: 0;
     margin-top: 40px;
+    justify-content: center;
+    width: 100%;
+}
 
-    .footer__logo__container {
-        justify-self: center;
+.footer__social__container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+}
 
-        .footer__logo {
-            margin-top: 20px;
-            max-width: 120px;
-            margin-left: 10px;
-        }
-    }
+.footer__social {
+    font-size: 1.5rem
+}
 
-    .footer__social__container {
-        display: flex;
-        justify-content: space-around;
+.footer__social:hover,
+.footer__info__container a:hover {
+    cursor: pointer;
+    color: getColour(backgroundwhite);
+}
 
-        .footer__social {
-            font-size: 1.5rem
-        }
-    }
 
-    .footer__info__container {
-        justify-self: center;
-        text-align: center;
-        font-weight: 600;
+.footer__info__container {
+    justify-self: center;
+    text-align: center;
+    font-weight: 600;
+}
+
+
+@media(min-width: 880px) {
+    .footer__social {
+        font-size: 2rem;
     }
 }
