--- a/sass/partials/_input.scss
+++ b/sass/partials/_input.scss
@@ -5,6 +5,7 @@
 
     .filter {
         margin-top: 10px;
+        min-width: 250px;
         max-width: 250px;
     }
 }
@@ -19,4 +20,28 @@ textarea {
         outline: none;
         border: 3px solid getColour(secondaryturquoise);
     }
+}
+
+input[type=file]::file-selector-button {
+    height: inherit;
+    width: 100px;
+    border: none;
+    border-right: 2px solid getColour(highlightorange);
+    background-color: getColour(backgroundwhite);
+    font-family: $font-primary;
+    padding-bottom: 5px;
+}
+
+input[type=file]::file-selector-button:hover {
+    cursor: pointer;
+    background-color: getColour(secondaryturquoise);
+    font-weight: bold;
+}
+
+@media(min-width: 1000px) {
+    .filter__grid {
+        display: flex;
+        justify-content: end;
+    }
+
 }
