--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -13,6 +13,7 @@ $colours: (
     tertiarygreen: #CFD0C3,
     highlightorange: #D4A591,
     backgroundwhite: #F7F1F1,
+    backgroundwhitetransparent: #f7f1f1ad,
     textcolourprimary: #423F38,
     textcoloursecondary: #262421
 );
