--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,7 @@
 @import "partials/nav";
 @import "partials/footer";
 @import "partials/messages";
+@import "partials/modals";
 @import "partials/loading";
 @import "partials/buttons";
 @import "partials/herobanner";
