updated preview image

--- a/sass/partials/_edit.scss
+++ b/sass/partials/_edit.scss
@@ -5,7 +5,8 @@
 }
 
 .preview__img {
-    max-width: 300px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
     margin: 5px 0px 20px 0px;
 }
