--- a/css/style.css
+++ b/css/style.css
@@ -1313,7 +1313,8 @@ hr {
 }
 
 .preview__img {
-  max-width: 300px;
+  width: 300px;
+  height: 300px;
   -o-object-fit: cover;
      object-fit: cover;
   margin: 5px 0px 20px 0px;
