--- a/css/style.css
+++ b/css/style.css
@@ -445,17 +445,17 @@ footer {
 }
 
 .loading__symbol__one {
-  -webkit-animation: 5000ms flyingAnimation ease-in-out infinite;
-          animation: 5000ms flyingAnimation ease-in-out infinite;
+  -webkit-animation: 4000ms flyingAnimation ease-in-out infinite;
+          animation: 4000ms flyingAnimation ease-in-out infinite;
   opacity: 0;
 }
 
 .loading__symbol__two {
-  -webkit-animation: 5000ms flyingAnimation ease-in-out infinite;
-          animation: 5000ms flyingAnimation ease-in-out infinite;
+  -webkit-animation: 4000ms flyingAnimation ease-in-out infinite;
+          animation: 4000ms flyingAnimation ease-in-out infinite;
   opacity: 0;
-  -webkit-animation-delay: 1250ms;
-          animation-delay: 1250ms;
+  -webkit-animation-delay: 1000ms;
+          animation-delay: 1000ms;
   position: absolute;
   top: 26px;
 }
@@ -549,6 +549,10 @@ button:hover,
   content: url(../../logo/small_flying_stork.svg);
 }
 
+.standard__cta__btn:hover::after span {
+  display: block;
+}
+
 .standard__cta__btn:hover {
   padding-top: 7px;
   border: 2px solid #423F38;
@@ -583,6 +587,7 @@ button:hover,
   border: 2px solid #D4A591;
   width: 300px;
   height: 64px;
+  background-color: #F7F1F1;
 }
 
 .all__products__link__container .logo__btn {
@@ -1309,6 +1314,10 @@ hr {
 
 .featured__icon__container .featured__icon {
   font-size: 2.4rem;
+}
+
+.featured__icon:hover {
+  cursor: pointer;
 }
 
 .preview__img__container,
