--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,6 +12,7 @@
 @import "partials/productCard";
 @import "partials/pagination";
 @import "partials/input";
+@import "partials/index";
 @import "partials/about";
 @import "partials/details";
 @import "partials/basket";
