--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -21,12 +21,23 @@ body {
 
 .container {
     max-width: 1000px;
-    padding: 0 2.4rem;
+    padding: 0px 40px;
     margin: 0 auto;
+}
+
+.content__wrapper,
+.content__wrapper__index {
+    display: grid;
+    grid-template-columns: auto;
 }
 
 .content__wrapper {
     margin-top: 130px;
+}
+
+.heading__container {
+    justify-self: center;
+    width: 300px;
 }
 
 a {
@@ -45,4 +56,16 @@ i :hover {
 
 .fa-heart {
     color: getColour(primaryred);
+}
+
+@media(min-width: 720px) and (max-width: 1000px) {
+    .heading__container {
+        width: 630px;
+    }
+}
+
+@media(min-width: 1001px) {
+    .heading__container {
+        width: 960px;
+    }
 }
