--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -7,12 +7,17 @@ footer {
     margin-top: 40px;
     justify-content: center;
     width: 100%;
+
+    p {
+        font-size: 0.8rem;
+        margin: 10px 0px 10px 0px;
+    }
 }
 
 .footer__social__container {
     display: flex;
     justify-content: space-around;
-    margin-top: 30px;
+    margin-top: 15px;
 }
 
 .footer__social {
@@ -25,16 +30,8 @@ footer {
     color: getColour(backgroundwhite);
 }
 
-
 .footer__info__container {
     justify-self: center;
     text-align: center;
     font-weight: 600;
-}
-
-
-@media(min-width: 880px) {
-    .footer__social {
-        font-size: 2rem;
-    }
 }
