--- a/sass/partials/_nav.scss
+++ b/sass/partials/_nav.scss
@@ -39,7 +39,8 @@ header {
     font-size: 1.6rem;
 }
 
-.hamburger__label :hover {
+.hamburger__label:hover,
+.basket__count:hover {
     cursor: pointer;
 }
 
@@ -100,8 +101,20 @@ header {
     justify-content: space-around;
     list-style: none;
     padding-left: 0px;
-    margin-top: 35px;
-    margin-right: 0px;
+    height: 100%;
+    margin: 0px;
+}
+
+.alt__nav__favorites,
+.alt__nav__user,
+.alt__nav__add {
+    height: 22px;
+    align-self: center;
+}
+
+.alt__nav__basket {
+    height: 100%;
+    padding-top: 40px;
 }
 
 .basket__count,
@@ -130,16 +143,19 @@ header {
 
 @media(min-width: 880px) {
     .navbar__container i {
-        font-size: 1.8rem;
+        font-size: 1.4rem;
     }
 
     .hamburger__label {
         padding: 40px 55px;
-        font-size: 2.3rem;
+    }
+
+    .nav {
+        min-width: 300px;
     }
 
     .nav__list li {
-        font-size: 1.7rem;
+        font-size: 1.5rem;
     }
 
     .nav__logo {
@@ -156,16 +172,21 @@ header {
         margin-right: 40px;
     }
 
+    .alt__nav__basket {
+        height: 100%;
+        padding: 40px 10px 0px 25px;
+    }
+
     .basket__count,
     .logout__user__x {
-        font-size: 17px;
-        width: 25px;
-        height: 25px;
+        font-size: 14px;
+        width: 22px;
+        height: 22px;
         left: 15px;
-        bottom: 40px;
+        bottom: 35px;
     }
 
     .logout__user__x {
-        font-size: 1rem;
+        font-size: 0.8rem;
     }
 }
