--- a/sass/partials/_productsContainer.scss
+++ b/sass/partials/_productsContainer.scss
@@ -8,6 +8,15 @@
     justify-content: center;
 }
 
+@media(min-width: 720px) and (max-width: 1000px) {
+
+    .all__products__grid,
+    .featured__container,
+    .favorite__grid {
+        grid-template-columns: repeat(2, auto);
+    }
+}
+
 @media(min-width: 1000px) {
 
     .all__products__grid,
